src/objects/Invoice_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Billable_Hours_Total__c</fullName>
        <formula>IF(
  RecordType.DeveloperName != &apos;X10K_Goodwill_Invoice_Line_Item&apos;,
  Rate__r.Hourly_Rate__c * Hours__c,
  0.00
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billable Hours Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <label>Expense Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expert_Names__c</fullName>
        <inlineHelpText>The Named Resources who worked on this Line Item for the given Invoice.</inlineHelpText>
        <label>Expert Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goodwill_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Goodwill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate_Text__c</fullName>
        <formula>Rate__r.Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Line_Item_Total_Text__c</fullName>
        <label>Line Item Total (Text)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Item_Total__c</fullName>
        <formula>IF(
  RecordType.DeveloperName = &apos;X10K_Product_Invoice_Line_Item&apos;,
  Total_Price__c,
  IF(RecordType.DeveloperName = &apos;X10K_Credit_Invoice_Line_Item&apos;, 
  0  -  Credit_Amount__c , 
  IF(RecordType.DeveloperName = &apos;X10K_Expense_Invoice_Line_Item&apos;, 
   Expense_Amount__c ,
  IF(    
    AND(
      NOT(ISBLANK(Goodwill_Amount__c)),
      Goodwill_Amount__c &gt; 0
    ),
    Goodwill_Amount__c * -1,
    IF(
      OR(
        ISBLANK(Manual_Line_Item_Total_Override__c),
        ISNULL(Manual_Line_Item_Total_Override__c)
      ),
      MAX(
        Minimum_Commitment__c,
        Billable_Hours_Total__c
      ),
      Manual_Line_Item_Total_Override__c
    )
   )
  )
 )
)</formula>
        <label>Line Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manual_Line_Item_Total_Override__c</fullName>
        <inlineHelpText>If necessary, an Admin can set the Line Item Total to a specific value, overriding the automatic calculations based on Rate &amp; Hours or Monthly Minimum.</inlineHelpText>
        <label>Manual Line Item Total Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Minimum_Commitment__c</fullName>
        <formula>IF( 
  ISPICKVAL(Invoice__r.Agreement__r.Rate_Structure__c, &quot;Monthly&quot;), 
  Rate__r.Monthly_Rate__c, 
  Rate__r.Weekly_Rate__c * Number_of_Weeks__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum Commitment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Rate_Text__c</fullName>
        <formula>Rate__r.Monthly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Named_Resource__c</fullName>
        <formula>CONTAINS(Rate__r.Name, &apos;Named Resource&apos;)</formula>
        <label>Named Resource?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Weeks__c</fullName>
        <label>Number of Weeks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuickBooks_Id__c</fullName>
        <externalId>true</externalId>
        <label>QuickBooks Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rate_Name_Text__c</fullName>
        <formula>Rate__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Rate</label>
        <referenceTo>Rate__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Sales_Price__c - Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trimmed_Rate_Name__c</fullName>
        <formula>TRIM(LEFT(Rate__r.Name, FIND(&quot;-&quot;, Rate__r.Name))) + &quot; &quot; + 
TRIM(LEFT(RIGHT(Rate__r.Name, LEN(Rate__r.Name)-FIND(&quot;-&quot;, Rate__r.Name)), FIND(&quot;-&quot;, RIGHT(Rate__r.Name, LEN(Rate__r.Name)-FIND(&quot;-&quot;, Rate__r.Name)))-2))</formula>
        <label>Trimmed Rate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Workato_Description__c</fullName>
        <formula>IF(
  OR(
    Invoice__r.RecordType.Name = &apos;10K Services Invoice&apos;,
    Invoice__r.RecordType.Name = &apos;Delivery Partner Invoice&apos;
  ),
  IF(
    RecordType.Name = &apos;10K Services Invoice Line Item&apos;,
    Rate__r.Name,
    IF(
      RecordType.Name = &apos;10K Expense Invoice Line Item&apos;,
      IF(
        ISBLANK(Description__c),
        &apos;Expenses&apos;,
        &apos;Expenses - &apos; + Description__c
      ),
      IF(
        RecordType.Name = &apos;10K Goodwill Invoice Line Item&apos;,
        IF(
          ISBLANK(Description__c),
          &apos;Goodwill - &apos; + Rate__r.Name,
          &apos;Goodwill - &apos; + Rate__r.Name + &apos; - &apos; + Description__c
        ),
        IF(
          RecordType.Name = &apos;10K Credit Invoice Line Item&apos;,
          IF(
            ISBLANK(Description__c),
            &apos;Credit&apos;,
            &apos;Credit - &apos; + Description__c
          ),
          &apos;&apos;
        )
      )
    )
  ),
  IF(
    Invoice__r.RecordType.Name = &apos;10K Product Invoice&apos;,
    Product__r.Name,
    &apos;&apos;
  )
)</formula>
        <label>Workato Description</label>
        <type>Text</type>
    </fields>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>ILI-{0000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <recordTypes>
        <fullName>X10K_Credit_Invoice_Line_Item</fullName>
        <active>true</active>
        <label>10K Credit Invoice Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>X10K_Expense_Invoice_Line_Item</fullName>
        <active>true</active>
        <label>10K Expense Invoice Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>X10K_Goodwill_Invoice_Line_Item</fullName>
        <active>true</active>
        <label>10K Goodwill Invoice Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>X10K_Product_Invoice_Line_Item</fullName>
        <active>true</active>
        <label>10K Product Invoice Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>X10K_Services_Invoice_Line_Item</fullName>
        <active>true</active>
        <label>10K Services Invoice Line Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Disallow_Manual_Overrides_Past_Jan_2017</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  Invoice__r.Invoice_Generated_On__c &gt; DATE(2017,01,01),
  NOT(ISBLANK(Manual_Line_Item_Total_Override__c))
)</errorConditionFormula>
        <errorDisplayField>Manual_Line_Item_Total_Override__c</errorDisplayField>
        <errorMessage>Manual Overrides have been deprecated on Invoices past Jan 1, 2017. Please use an appropriate Invoice Line Item Record Type to make any necessary adjustments to the Invoice.</errorMessage>
    </validationRules>
</CustomObject>